# sabbah

./: README.md  meson.build  test.sbb
include/error/: error.hpp
include/token/: operator.hpp  token.hpp  whitespace.hpp
src/: error.cpp  main.cpp  token.cpp
